# viloxtermjs

./: .gitignore  DEVELOPER_GUIDE.md  LICENSE  README.md  pyproject.toml  setup-git-hooks.sh  setup.py
.githooks/: README.md  commit-msg  pre-commit
.github/: CI_DOCKER.md  Dockerfile.ci
.github/workflows/: docker-ci-image.yml  release.yml  test.yml
examples/: simple_demo.py  tabbed_terminal.py
tests/: __init__.py  conftest.py  test_server.py  test_widget.py
viloxtermjs/: __init__.py  server.py  widget.py
